# fah-explorer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/fah/: __init__.py  config.py  main.py
backend/fah/api/: auth.py  deps.py  routes_extraction.py  routes_layers.py  routes_map.py  routes_pages.py  routes_projects.py  routes_risk.py  routes_translate.py  routes_upload.py  schemas.py
backend/fah/db/: __init__.py  models.py  seed.py  session.py
backend/fah/gis/: __init__.py  domains.py  export.py  geometry.py  interpolate.py  layers.py  render.py  surface.py
backend/fah/ingest/: __init__.py  llm_extractor.py  pdf_reader.py  reviewer.py  schemas.py
config/: risk_rules.yaml  settings.yaml  translation_rules.yaml
docs/: 00_INDEX.md  01_PROJECT_VISION.md  02_DOMAIN_KNOWLEDGE_FAH.md  03_SYSTEM_ARCHITECTURE.md  04_DATABASE_SCHEMA.md  05_HYDROSTRATIGRAPHIC_TRANSLATION.md  06_RISK_SCORING_FRAMEWORK.md  07_PDF_EXTRACTION_WORKFLOW.md  08_GIS_ARCHITECTURE.md  09_API_DESIGN.md  10_MVP_REQUIREMENTS.md  11_IMPLEMENTATION_ROADMAP.md  12_FUTURE_ROADMAP.md  13_SPATIAL_INTERPOLATION.md
frontend/templates/: base.html  dashboard.html  map.html  review.html  workspace.html
scripts/: backup_db.ps1  backup_db.sh  demo_ingest.py  demo_surface.py  init_db.py  start.ps1  start.sh
tests/: conftest.py  test_api.py  test_db.py  test_extraction.py  test_gis.py  test_ingest.py  test_ingest_integrity.py  test_reports.py  test_risk_engine.py  test_translation.py
tests/fixtures/: sample_extraction.json
(+18 files in other folders)
