[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fah-explorer"
version = "1.0.0"
description = "Forensic Asset Hydrogeology Explorer — geotechnical data to groundwater & asset-risk intelligence"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",   # file uploads
    "jinja2>=3.1",
    # data / db
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    # ingest
    "pdfplumber>=0.11",
    # OCR fallback (optional at runtime; reader degrades gracefully if absent)
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",
    # LLM extraction (Sprint 2)
    "anthropic>=0.40",
    # GIS (Sprints 5-6)
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "rasterio>=1.3",
    "pykrige>=1.7",
    "simplekml>=1.3",
    # reports
    "reportlab>=4.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.9", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
